intel/bench_214_work/extr_.kphp-kdbhintsutf8_utils.c_translit_from_ru_to_en_with_main/log.txt
bench_214_work/extr_.kphp-kdbhintsutf8_utils.c_translit_from_ru_to_en_with_main/extr_.kphp-kdbhintsutf8_utils.c_translit_from_ru_to_en_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
